--- a/Client/Pages/ViewSlideDeckPage.razor
+++ b/Client/Pages/ViewSlideDeckPage.razor
@@ -11,6 +11,7 @@
 <MudContainer MaxWidth="MaxWidth.Medium">
     @if (!hasLoaded) {
         <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
+        <MudDivider Class="mb-8" />
         <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="200px" Height="110px" />
     } else {
         <Learning.Client.Components.SlideDeckView SlideDeck="SlideDeck"></Learning.Client.Components.SlideDeckView>
