--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -2,7 +2,7 @@
 
 <MudDivider Class="mb-4" />
 <MudNavMenu>
-    <MudNavLink Href="allUserAvatars" Icon="@Icons.Material.Filled.ListAlt" Disabled="true">Avatars</MudNavLink>
+    <MudNavLink Href="allUserAvatars" Icon="@Icons.Material.Filled.ListAlt">Avatars</MudNavLink>
 
     <MudText Typo="Typo.subtitle2" Color="Color.Inherit" Class="ml-4 my-3">Content</MudText>
     <MudNavGroup Title="Slide decks" Expanded="true">
