--- a/Client/Components/UserAvatarView.razor
+++ b/Client/Components/UserAvatarView.razor
@@ -1,66 +1,65 @@
 ﻿@using Learning.Shared.DbModels
 @inject NavigationManager NavigationManager
 
-<MudGrid>
-    <MudItem xs="12">
-        <MudPaper Elevation="3" Class="pa-2 mx-2">
-            <MudText Typo="Typo.h6">User Avatar</MudText>
-            <MudText Typo="Typo.body1">@UserAvatar.Name</MudText>
-            <MudText Typo="Typo.body1">@UserAvatar.Description</MudText>
-            @if (!string.IsNullOrWhiteSpace(UserAvatar.CoverImage)) {
-                <div>
-                    <img src="@UserAvatar.CoverImage" class="width:100%;" />
 
-                </div>
-            }
-
-        </MudPaper>
-    </MudItem>
-    <MudItem>
-        @if (UserAvatar.CompletedSlideDeckPrograms != null) {
-            @foreach (var cslp in UserAvatar.CompletedSlideDeckPrograms) {
-                <MudContainer Class="pa-2 mx-2">
-                    <MudText Typo="Typo.body1">@cslp.SlideDeckProgram.Title</MudText>
-                    <MudText Typo="Typo.body1">@cslp.Comment</MudText>
-                    <MudText Typo="Typo.body1">@cslp.CompletedOn</MudText>
-                    <MudText Typo="Typo.body2">@cslp.IsPublic</MudText>
-                    <MudRating ReadOnly="true" SelectedValue=@cslp.UserAvatarFeedback></MudRating>
-                    <MudButton OnClick="@(() => NavigationManager.NavigateTo($"sharedCompletedProgram/{cslp.Id}"))">Share</MudButton>
-                </MudContainer>
-
-            }
+<MudPaper Elevation="3" Class="pa-2 mx-2">
+    <div class="d-flex flex-column justify-center ">
+        <MudText Align="Align.Center" Typo="Typo.h6">@UserAvatar.Name</MudText>
+        @if (!string.IsNullOrWhiteSpace(UserAvatar.CoverImage)) {
+            <MudAvatar Image="@UserAvatar.CoverImage" Style="height:200px; width:200px;">
+            </MudAvatar>
         }
-    </MudItem>
-    <MudItem>
-        @if (UserAccessSlideDeckPrograms != null) {
-            @foreach (var userAccessslidedeckprogram in UserAccessSlideDeckPrograms) {
-                <MudContainer Class="pa-2 mx-2">
-                    <MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Title</MudText>
-                    <MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Description</MudText>
-                    <MudText Typo="Typo.body1">@userAccessslidedeckprogram.Comments</MudText>
-                    <MudButton OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeckProgram/{userAccessslidedeckprogram.SlideDeckProgramId}"))">Just do it</MudButton>
-                </MudContainer>
-            }
-        }
-    </MudItem>
-    <MudItem>
-        @if (CompletedProgramReviewables != null) {
-            @foreach (var completedProgramReviewable in CompletedProgramReviewables) {
-                <MudContainer Class="pa-2 mx-2">
-                    <MudText Typo="Typo.body1">@((MarkupString)completedProgramReviewable.ReviewedComment)</MudText>
-                    <MudText Typo="Typo.body1">@completedProgramReviewable.IsReviewed</MudText>
-                    <MudText Typo="Typo.body1">@completedProgramReviewable.CompletedSlideDeckProgramId</MudText>
-                </MudContainer>
-            }
-        }
-    </MudItem>
-</MudGrid>
+        <MudText Align="Align.Center" Typo="Typo.body1">@UserAvatar.Description</MudText>
+    </div>
 
-@code {
-    [Parameter]
-    public UserAvatar UserAvatar { get; set; }
-    [Parameter]
-    public List<UserAccessSlideDeckProgram> UserAccessSlideDeckPrograms { get; set; }
-    [Parameter]
-    public List<CompletedProgramReviewable> CompletedProgramReviewables { get; set; }
-}
+
+    <MudTabs Elevation="0" Rounded="false" ApplyEffectsToContainer="true" PanelClass="pa-6">
+        <MudTabPanel Text="Completed Programs">
+            @if (UserAvatar.CompletedSlideDeckPrograms != null) {
+                @foreach (var cslp in UserAvatar.CompletedSlideDeckPrograms) {
+                    <div Class="pa-2 mx-2">
+                        <MudText Typo="Typo.body1">@cslp.SlideDeckProgram.Title</MudText>
+                        <MudText Typo="Typo.body1">@cslp.Comment</MudText>
+                        <MudText Typo="Typo.body1">@cslp.CompletedOn</MudText>
+                        <MudText Typo="Typo.body2">@cslp.IsPublic</MudText>
+                        <MudRating ReadOnly="true" SelectedValue=@cslp.UserAvatarFeedback></MudRating>
+                        <MudButton OnClick="@(() => NavigationManager.NavigateTo($"sharedCompletedProgram/{cslp.Id}"))">Share</MudButton>
+                    </div>
+                }
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Assigned Programs">
+            @if (UserAccessSlideDeckPrograms != null) {
+                @foreach (var userAccessslidedeckprogram in UserAccessSlideDeckPrograms) {
+                    <div Class="pa-2 mx-2">
+                        <MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Title</MudText>
+                        <MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Description</MudText>
+                        <MudText Typo="Typo.body1">@userAccessslidedeckprogram.Comments</MudText>
+                        <MudButton OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeckProgram/{userAccessslidedeckprogram.SlideDeckProgramId}"))">Just do it</MudButton>
+                    </div>
+                }
+            }
+        </MudTabPanel>
+        <MudTabPanel Text="Completed Reviewed Programs">
+            @if (CompletedProgramReviewables != null) {
+                @foreach (var completedProgramReviewable in CompletedProgramReviewables) {
+                    <div Class="pa-2 mx-2">
+                        <MudText Typo="Typo.body1">@((MarkupString)completedProgramReviewable.ReviewedComment)</MudText>
+                        <MudText Typo="Typo.body1">@completedProgramReviewable.IsReviewed</MudText>
+                        <MudText Typo="Typo.body1">@completedProgramReviewable.CompletedSlideDeckProgramId</MudText>
+                    </div>
+                }
+            }
+        </MudTabPanel>
+    </MudTabs>
+</MudPaper>
+
+
+        @code {
+            [Parameter]
+            public UserAvatar UserAvatar { get; set; }
+            [Parameter]
+            public List<UserAccessSlideDeckProgram> UserAccessSlideDeckPrograms { get; set; }
+            [Parameter]
+            public List<CompletedProgramReviewable> CompletedProgramReviewables { get; set; }
+        }
