--- a/Client/Components/UserAvatarView.razor
+++ b/Client/Components/UserAvatarView.razor
@@ -3,56 +3,76 @@
 
 
 <MudPaper Elevation="3" Class="pa-2 mx-2">
-    <div class="d-flex flex-column justify-center ">
-        <MudText Align="Align.Center" Typo="Typo.h6">@UserAvatar.Name</MudText>
-        @if (!string.IsNullOrWhiteSpace(UserAvatar.CoverImage)) {
+
+    <MudText Align="Align.Center" Typo="Typo.h6">@UserAvatar.Name</MudText>
+    @if (!string.IsNullOrWhiteSpace(UserAvatar.CoverImage)) {
+        <div class="d-flex justify-center ma-4">
             <MudAvatar Image="@UserAvatar.CoverImage" Style="height:200px; width:200px;">
             </MudAvatar>
-        }
-        <MudText Align="Align.Center" Typo="Typo.body1">@UserAvatar.Description</MudText>
-    </div>
-
-
-    <MudTabs Elevation="0" Rounded="false" ApplyEffectsToContainer="true" PanelClass="pa-6">
-        <MudTabPanel Text="Completed Programs">
-            @if (UserAvatar.CompletedSlideDeckPrograms != null) {
-                @foreach (var cslp in UserAvatar.CompletedSlideDeckPrograms) {
-                    <div Class="pa-2 mx-2">
-                        <MudText Typo="Typo.body1">@cslp.SlideDeckProgram.Title</MudText>
-                        <MudText Typo="Typo.body1">@cslp.Comment</MudText>
-                        <MudText Typo="Typo.body1">@cslp.CompletedOn</MudText>
-                        <MudText Typo="Typo.body2">@cslp.IsPublic</MudText>
-                        <MudRating ReadOnly="true" SelectedValue=@cslp.UserAvatarFeedback></MudRating>
-                        <MudButton OnClick="@(() => NavigationManager.NavigateTo($"sharedCompletedProgram/{cslp.Id}"))">Share</MudButton>
-                    </div>
-                }
+        </div>
             }
-        </MudTabPanel>
-        <MudTabPanel Text="Assigned Programs">
-            @if (UserAccessSlideDeckPrograms != null) {
-                @foreach (var userAccessslidedeckprogram in UserAccessSlideDeckPrograms) {
-                    <div Class="pa-2 mx-2">
+            <MudText Align="Align.Center" Typo="Typo.body1">@UserAvatar.Description</MudText>
+        
+    <MudDivider DividerType="DividerType.Middle"/>
+
+        <MudTabs Elevation="0" Rounded="false" ApplyEffectsToContainer="true" PanelClass="pa-6">
+            <MudTabPanel Text="Completed Programs">
+                @if (UserAvatar.CompletedSlideDeckPrograms != null) {
+                    @foreach (var cslp in UserAvatar.CompletedSlideDeckPrograms) {
+                        <MudPaper Class="pa-2 ma-2">
+                            <MudText Typo="Typo.body1">@cslp.SlideDeckProgram.Title</MudText>
+                            <MudText Typo="Typo.body1">@cslp.Comment</MudText>
+                            <MudText Typo="Typo.body2">@cslp.CompletedOn</MudText>
+                            @*<MudText Typo="Typo.body2">@cslp.IsPublic</MudText>*@
+                            <MudRating ReadOnly="true" SelectedValue=@cslp.UserAvatarFeedback></MudRating>
+                            <MudButton OnClick="@(() => NavigationManager.NavigateTo($"sharedCompletedProgram/{cslp.Id}"))">Share</MudButton>
+                        </MudPaper>
+                        
+                    }
+                }
+            </MudTabPanel>
+            <MudTabPanel Text="Assigned Programs">
+                @if (UserAccessSlideDeckPrograms != null) {
+                    @foreach (var userAccessslidedeckprogram in UserAccessSlideDeckPrograms) {
+                    <MudPaper Class="pa-2 ma-2">
                         <MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Title</MudText>
-                        <MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Description</MudText>
+                        @*<MudText Typo="Typo.body1">@userAccessslidedeckprogram.SlideDeckProgram.Description</MudText>*@
+                        <MudDivider DividerType="DividerType.Middle" />
                         <MudText Typo="Typo.body1">@userAccessslidedeckprogram.Comments</MudText>
                         <MudButton OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeckProgram/{userAccessslidedeckprogram.SlideDeckProgramId}"))">Just do it</MudButton>
-                    </div>
+                    </MudPaper>
+                    }
                 }
-            }
-        </MudTabPanel>
-        <MudTabPanel Text="Completed Reviewed Programs">
-            @if (CompletedProgramReviewables != null) {
-                @foreach (var completedProgramReviewable in CompletedProgramReviewables) {
-                    <div Class="pa-2 mx-2">
+            </MudTabPanel>
+            <MudTabPanel Text="Completed Reviewed Programs">
+                @if (CompletedProgramReviewables != null) {
+                    @foreach (var completedProgramReviewable in CompletedProgramReviewables) {
+                <MudPaper Class="pa-2 ma-2">
+                    <MudText Typo="Typo.h6">@completedProgramReviewable.CompletedSlideDeckProgram.SlideDeckProgram.Title</MudText>
+                    <MudText Typo="Typo.body2" Class="mb-2">@completedProgramReviewable.CompletedSlideDeckProgram.CompletedOn</MudText>
+                    <MudText Typo="Typo.subtitle1">Your comment</MudText>
+                    @if (string.IsNullOrWhiteSpace(completedProgramReviewable.CompletedSlideDeckProgram.Comment)) {
+                        <MudText>You gave no comment... </MudText>
+                    } else {
+                        <MudText>@completedProgramReviewable.CompletedSlideDeckProgram.Comment</MudText>
+                    }
+
+                    <MudDivider Class="my-2" DividerType="DividerType.Middle" />
+                    @if (completedProgramReviewable.IsReviewed) {
+
+                        <MudText Typo="Typo.subtitle1">Response to comment</MudText>
+
                         <MudText Typo="Typo.body1">@((MarkupString)completedProgramReviewable.ReviewedComment)</MudText>
-                        <MudText Typo="Typo.body1">@completedProgramReviewable.IsReviewed</MudText>
-                        <MudText Typo="Typo.body1">@completedProgramReviewable.CompletedSlideDeckProgramId</MudText>
-                    </div>
+
+                    } else {
+                        <MudText Typo="Typo.h6">Waiting fore response..</MudText>
+                    }
+                </MudPaper>
+                    }
                 }
-            }
-        </MudTabPanel>
-    </MudTabs>
-</MudPaper>
+            </MudTabPanel>
+        </MudTabs>
+    </MudPaper>
 
 
         @code {
