--- a/Client/Pages/ListAllSlideDeckProgramsPage.razor
+++ b/Client/Pages/ListAllSlideDeckProgramsPage.razor
@@ -37,19 +37,7 @@
 @if (SlideDeckProgramsPublished != null) {
 
     <MudContainer MaxWidth="MaxWidth.Medium">
-        @foreach (var slideDeckProgram in SlideDeckProgramsPublished) {
-            <MudPaper Elevation="3" Class="pa-2 mb-4">
-                <MudText Typo="Typo.h6">@slideDeckProgram.Title</MudText>
-                @if (!string.IsNullOrWhiteSpace(slideDeckProgram.CoverImage)) {
-                    <div>
-                        <img src="@slideDeckProgram.CoverImage" class="width:100%;" />
-
-                    </div>
-                }
-                <MudText Typo="Typo.body1">@slideDeckProgram.Description</MudText>
-                <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="@(() => NavigationManager.NavigateTo($"viewSlideDeckProgram/{slideDeckProgram.Id}"))">Learn More</MudButton>
-            </MudPaper>
-        }
+        <Learning.Client.Components.SlideDeckProgramList Context="SlideDeckProgramsPublished"/>
     </MudContainer>
 } else {
     <MudContainer MaxWidth="MaxWidth.Medium">
