--- a/Client/App.razor
+++ b/Client/App.razor
@@ -1,6 +1,8 @@
+<Fluxor.Blazor.Web.StoreInitializer />
 <MudThemeProvider />
 <MudDialogProvider />
 <MudSnackbarProvider />
+
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly">
